--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -3,123 +3,86 @@ html
   head
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"
-    title Remoto
+    title Dra. Júlia Torres - Psiquiatra em Brasília
     meta name="description" content=""
     meta name="author" content=""
     meta name="keywords" content=""
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     link rel="icon" type="image/png" href="./images/favicon.png"
     link href="./style/style.css" rel="stylesheet" type='text/css'
+    script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"
 
   body
 
     nav.navigation-menu
-      a Remoto
-      a.link href="http://beta.remoto.me/auth/sign-in" target="_blank" Sign-in
-      a.link href="#pricing" Pricing
-      a.link href="#product" Product
+      a Dra. Júlia Torres
+      a.link href="#where" Consultórios
+      a.link href="#pricing" Preços & Planos
+      a.link href="#about" Sobre
 
+    section#about.section
+      img src="./images/julia.jpg"/
+      h2 Sobre
+      p Atual Diretora Médica da Clínica Psicodiagnóstica, Dra. Júlia Torres já foi Diretora Médica do Hospital Nise da Silveira, referência nacional na área de psiquiatria, e Coordenadora de Atenção Hospitalar da Superintendência de Saúde Mental da cidade do Rio de Janeiro.
 
-    header.section-hero
-      h1 Keep your team close  and your clients closer
-      h4 Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
-      a.button href="http://beta.remoto.me" target="_blank" Start Free
+      a.button href="#where" Agende uma consulta
 
-    / .cta-page
-    /   .container
-    /     h1 We are almost there...
-    /     p Keep in mind we are still on “alpha” phase, so there may be some bugs and inconveniences.
-    /     a.button href="http://beta.remoto.me/auth/sign-up" Be Brave
-    /     a.button.-cancel No, Thanks
-    /     #close-cta Close
+      h3 Formação
+      ul
+        li IPUB/UFRJ
+        li ESCS DF
 
-    section#product.section-features
-      .feature
-        h2 Your team on the same page
-        p Great customer communication relies on internal coordination. With Remoto, your team shares a common view of all customer interactions and stays always in sync.
-      .feature
-        h2 Freedom from the desk phone
-        p Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize, no cheat sheet clutering your desk.
-      .feature
-        h2 Transform your business in 7 min.
-        p Choose toll-free or local numbers from over 40 countries, invite your team members and get going in under 7 minutes. No need for the IT guy or hardware investments
+      h3 Especialidades
+      p Ao procurar uma médica, você quer ter certeza que ela é especialista no seu problema. Ao mesmo tempo, especialmente em se tratando de saúde mental, é preciso sempre respeitar a complexidade do ser humano e saber que cada caso é um caso.
 
-    section#pricing.section-pricing
-      h1 Simple Pricing.
-      .plans
-        .plan
-          h2.name Free
-          h3.price $0
-          p.note Yeeah! 🎉
-          a.button.-small href="http://beta.remoto.me/auth/sign-up" target="_blank" Start Free
-          ul.features
-            li Free Intra-company calls worldwide
-            li 1 month message storage
-            li Unlimited groups
-        .plan.-soon
-          h2.name Professional
-          h3.price $20
-          p.note per active user, per month
-          a.button.-small Available Soon…
-          ul.features
-            li All features from Free plan
-            li 1 year message storage
-            li Toll free number
-            li Unlimited inbound calls*
-            li Outbound calls**
-        .plan.-soon
-          h2.name Enterprise
-          h3.price $50
-          p.note per active user, per month
-          a.button.-small Available Soon…
-          ul.features
-            li All features from Professional plan
-            li Unlimited message storage
-            li Call Queues
-            li Bring Your Own Carrier
-            li Compliance Exports for all messages
-            li Advanced IVR
-      .footnote
-        p
-          | * toll free excluded
-        p
-          | ** price per minute
+      p Os problemas mais comuns dos pacientes que me buscam no consultório:
 
-    section.section-letter
-      .envelope
-      .letter
-        h1 A Letter from our CEO
-        p.-bold Save yourself. Save the world.
-        p Life is short and the world is warming. What can you do about it? I bet you already are: <span class="-strike">Remoto</span> Remote working.
-        p The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere. Everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love and see the world, without ever having to commute.
-        p Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen. How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization?
-        p This is a problem I had myself and so did several professionals we interviewed. Remoto's goal is to allow you to communicate better with your customers and your team, and prove that people don't need to be in the same room to be on the same page.
-        p Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
-        p Yours,
-        p.signature Fred Guth, Founder & CEO
-        / p P.S.  If you want to talk, just reach me at <a href="http://beta.remoto.me/fred@remoto">remoto.me/fred@remoto.</a>
-      a.button href="http://beta.remoto.me" target="_blank" Start Free
+      ul
+        li Depressão
+        li Ansiedade
+        li TDAH
+        li Autismo
+        li Transtorno Bipolar
+        li Transtorno de Pânico
 
-    / footer.section-footer
-    /   .column
-    /     a Remoto
-    /     a Blog
-    /     a Facebook
-    /     a Linkedin
-    /   .column
-    /     h4 Remoto
-    /     a Features
-    /     a Pricing
-    /   .column
-    /     h4 Download
-    /     a Desktop App
-    /     a Mobile App
-    /   .column
-    /     h4 Support
-    /     a 800-736-6860
-    /     a hi@remoto.me
-    /     a href="terms-of-service.html" target="_blank" Terms of Service
-    /     a href="terms-of-service.html" target="_blank" Privacy
+      p Mas caso seu problema não esteja listado aqui, não se acanhe. Com anos de trabalho no SUS e em consultório particular, posso dizer em psiquiatria já vi e vivi muita coisa.
+
+      p Marque uma consulta e me conte seu problema. Caso eu considere que outro profissional poderá melhor atendê-lo, ficarei feliz em te encaminhar e nem cobrarei a consulta.
+
+      a.button href="#where" Agende uma consulta
+
+    section#pricing.section
+    h2 Preços
+    h4 Consulta
+    p R$ 450,00
+    p A consulta dura o tempo que for necessário, normalmente 1 hora.
+    h4 Formas de Pagamento
+    p Cheque ou dinheiro.
+
+    section#where.section
+    h2 Consulórios
+    ute
+
+    footer.section-footer
+      .column
+        a Remoto
+        a Blog
+        a Facebook
+        a Linkedin
+      .column
+        h4 Remoto
+        a Features
+        a Pricing
+      .column
+        h4 Download
+        a Desktop App
+        a Mobile App
+      .column
+        h4 Support
+        a 800-736-6860
+        a hi@remoto.me
+        a href="terms-of-service.html" target="_blank" Terms of Service
+        a href="terms-of-service.html" target="_blank" Privacy
 
 
     script src="js/scripts.js"
