--- a/src/style/ambience/_colors.sass
+++ b/src/style/ambience/_colors.sass
@@ -1,6 +1,6 @@
-$color-pearl: #dca
+$color-pearl: #677
 $color-saphire: #07c
 $color-darksaphire: #347
-$color-topaz: #f75
+$color-topaz: #fc0
 
 $color-selection: mix(#fff, $color-topaz, 40%)
