--- a/src/style/components/_section-columned.sass
+++ b/src/style/components/_section-columned.sass
@@ -1,13 +1,12 @@
-.section-footer
-  background-color: #333
-  color: #ddd
+.section-columned
   display: flex
-  box-shadow: 0 0 64px rgba(#000, 0.2)
   flex-wrap: wrap
   justify-content: space-between
 
+  h2
+    width: 100%
   > .column
-    width: 25%
+    width: 30%
     min-width: $space-xl
     padding-right: $space-s
     padding-left: $space-s
