--- a/src/view/index.slim
+++ b/src/view/index.slim
@@ -23,66 +23,41 @@ html
     section#about.section
       img src="./images/julia.jpg"/
       h2 Sobre
-      p Atual Diretora Médica da Clínica Psicodiagnóstica, Dra. Júlia Torres já foi Diretora Médica do Hospital Nise da Silveira, referência nacional na área de psiquiatria, e Coordenadora de Atenção Hospitalar da Superintendência de Saúde Mental da cidade do Rio de Janeiro.
+
+      p Psiquiatra formada no IPUB/UFRJ, Dra. Júlia Torres atende principalmente crianças, adolescentes e adultos com problemas de ansiedade, depressão e TDAH.
 
       a.button href="#where" Agende uma consulta
 
-      h3 Formação
-      ul
-        li IPUB/UFRJ
-        li ESCS DF
+    section#pricing.section-columned
+      .column
+        h2 Preços
+        h3 Consultas
+        p R$450
+        h3 Formas de Pagamento
+        p Dinheiro, Cheque ou Depósito.
+      .column
+        h2 Planos
+        p
+          b Dra. Júlia não é conveniada a nenhum plano de saúde.
 
-      h3 Especialidades
-      p Ao procurar uma médica, você quer ter certeza que ela é especialista no seu problema. Ao mesmo tempo, especialmente em se tratando de saúde mental, é preciso sempre respeitar a complexidade do ser humano e saber que cada caso é um caso.
+        p Se você possui seguro saúde ou a opção de livre escolha em seu plano de saúde, poderá receber reembolso apresentando o recibo que será entregue durante a consulta.
 
-      p Os problemas mais comuns dos pacientes que me buscam no consultório:
+      h2 Consultórios
+      .column
+        h3 Liberty Mall
+        p Torre B - Sala 807
+        p Asa Norte
+        p Tel. (61) 3024-9058
 
-      ul
-        li Depressão
-        li Ansiedade
-        li TDAH
-        li Autismo
-        li Transtorno Bipolar
-        li Transtorno de Pânico
-
-      p Mas caso seu problema não esteja listado aqui, não se acanhe. Com anos de trabalho no SUS e em consultório particular, posso dizer em psiquiatria já vi e vivi muita coisa.
-
-      p Marque uma consulta e me conte seu problema. Caso eu considere que outro profissional poderá melhor atendê-lo, ficarei feliz em te encaminhar e nem cobrarei a consulta.
-
-      a.button href="#where" Agende uma consulta
-
-    section#pricing.section
-    h2 Preços
-    h4 Consulta
-    p R$ 450,00
-    p A consulta dura o tempo que for necessário, normalmente 1 hora.
-    h4 Formas de Pagamento
-    p Cheque ou dinheiro.
-
-    section#where.section
-    h2 Consulórios
-    ute
+      .column
+        h3 Centro Médico Lúcio Costa
+        p SGAS 610, Lt 74 Conjunto F
+        p Bl.2 - Sala 227
+        p Asa Sul
+        p Tel. (61) 3536-6360
 
     footer.section-footer
       .column
-        a Remoto
-        a Blog
-        a Facebook
-        a Linkedin
-      .column
-        h4 Remoto
-        a Features
-        a Pricing
-      .column
-        h4 Download
-        a Desktop App
-        a Mobile App
-      .column
-        h4 Support
-        a 800-736-6860
-        a hi@remoto.me
-        a href="terms-of-service.html" target="_blank" Terms of Service
-        a href="terms-of-service.html" target="_blank" Privacy
-
+        p Júlia Torres c Copyright 2017
 
     script src="js/scripts.js"
