--- a/src/style/ambience/_fonts.sass
+++ b/src/style/ambience/_fonts.sass
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i')
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i')
 @import url('https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600,600i,700,700i')
+@font-face
+    font-family: 'bulletsregular'
+    src: url('../font/bullets-webfont.ttf') format('truetype')
+    font-weight: normal
+    font-style: normal
