--- a/src/style/base/_unclassed.sass
+++ b/src/style/base/_unclassed.sass
@@ -1,9 +1,12 @@
 html
-  font-size: 16px
-  background-color: hsl(0, 0%, 97%)
+  font-size: 1em
+  background-color: #fafbf5
   font-family: $font-family-body
   font-weight: 400
   height: 100%
+  -webkit-font-smoothing: antialiased
+  font-smooth: always
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004)
 
 a
   text-decoration: none
@@ -17,3 +20,8 @@ a
 
 ::selection
   background-color: $color-selection
+
+li:before
+  content: "g"
+  font-family: "bulletsregular"
+  color: #fc0
