--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -16,12 +16,9 @@
 
 // Components
 @import 'components/navigation-menu'
-@import 'components/section-hero'
-@import 'components/section-features'
-@import 'components/section-pricing'
-@import 'components/section-letter'
+@import 'components/section'
+@import 'components/section-columned'
 @import 'components/section-footer'
-@import 'components/cta-page'
 
 // Elements
 @import 'elements/button'
