--- a/src/style/ambience/_colors.sass
+++ b/src/style/ambience/_colors.sass
@@ -1,6 +1,6 @@
-$color-pearl: #677
-$color-saphire: #07c
-$color-darksaphire: #347
-$color-topaz: #fc0
+$color-night: #677
+$color-night: #504d54
+$color-sun: #fc0
+$color-sand: #fafaf5
 
-$color-selection: mix(#fff, $color-topaz, 40%)
+$color-selection: mix(#fff, $color-sun, 40%)
