--- a/src/style/components/_section-columned.sass
+++ b/src/style/components/_section-columned.sass
@@ -3,13 +3,14 @@
   flex-wrap: wrap
   justify-content: space-between
 
-  h2
+  > h1
     width: 100%
+
   > .column
     width: 30%
     min-width: $space-xl
-    padding-right: $space-s
-    padding-left: $space-s
+    // padding-right: $space-s
+    // padding-left: $space-s
     flex-grow: 1
     > *
       display: block
