--- a/src/style/base/_responsive.sass
+++ b/src/style/base/_responsive.sass
@@ -1,6 +1,6 @@
 // Breakopints
 
-$bp-small: 640px
+$bp-small: 760px
 $bp-medium: 960px
 $bp-large: 1024px
 $bp-huge: 1920px
@@ -20,6 +20,9 @@ $bp-huge: 1920px
   @media (min-width: $bp-large + 1px) and (max-width: $bp-huge)
     @content
 
+=small-up
+  @media (min-width: $bp-small + 1px)
+    @content
 =medium-up
   @media (min-width: $bp-medium + 1px)
     @content
