--- a/src/style/base/_structure.sass
+++ b/src/style/base/_structure.sass
@@ -1,8 +1,11 @@
 body > section,
 body > header,
 body > footer
-  padding-top: $space-xl
-  padding-bottom: $space-xl
   +container
+  padding-top: $space-l + $space-s
+  padding-bottom: $space-l + $space-s
   position: relative
   z-index: 2
+  +medium-up
+    padding-top: $space-l + $space-l
+    padding-bottom: $space-l + $space-l
