--- a/src/style/components/_section-footer.sass
+++ b/src/style/components/_section-footer.sass
@@ -1,10 +1,15 @@
 .section-footer
-  background-color: #333
-  color: #ddd
+  background-color: mix(#000, $color-night, 60%)
+  color: rgba($color-sun, 0.6)
   display: flex
   box-shadow: 0 0 64px rgba(#000, 0.2)
   flex-wrap: wrap
   justify-content: space-between
+  padding-top: $space-l
+  padding-bottom: $space-l
+
+  p
+    margin: 0
 
   > .column
     width: 25%
