--- a/src/style/components/_section.sass
+++ b/src/style/components/_section.sass
@@ -3,10 +3,15 @@
   padding-bottom: 2rem
   background-color: #fafbf5
   overflow: hidden
-  +medium-up
-    img
+  > img
+    max-width: 100%
+  +small-only
+    text-align: center
+    > img
+      margin-bottom: $space-s
+  +small-up
+    > img
       margin-left: 0.5rem
       margin-right: 0.5rem
       margin-bottom: 1rem
       float: right
-      border: solid 4px #ddd
