--- a/src/style/elements/_button.sass
+++ b/src/style/elements/_button.sass
@@ -1,33 +1,34 @@
 .button
+  +btn-color($color-sun, $color-night)
+
+  padding-top: $space-xs
+  padding-bottom: $space-xs
+  padding-right: $space-m
+  padding-left: $space-m
+  font-size: $font-size-base
+  line-height: $line-height-deci
+
   margin-top: 2rem
   margin-bottom: 2rem
   display: inline-block
-  border-radius: 1rem
-  box-shadow: 0 4px 16px rgba(#000, 0.2)
   cursor: pointer
-  transition: all 0.2s ease
-  font-weight: 500
+  transition: all 0.3s ease
+  font-weight: 700
   letter-spacing: 0.05em
   text-align: center
   border: none
   outline: none
-  +btn-color(#fc0, #677)
-  +btn-size
+  text-transform: uppercase
+  letter-spacing: 0.2em
 
   &.-cancel
     +btn-color(#ccc)
 
-  &.-small
-    +btn-size-small
-
-  &.-tiny
-    +btn-size-tiny
-
-
   &:hover
-    background-color: #677
-    color: #fc0
-  &:focus
-    box-shadow: 0 3px 11px rgba(#000, 0.3)
+    background-color: mix($color-sand, $color-sun, 30%)
+    box-shadow: 0 4px 16px rgba(#000, 0.1)
+  &:focus,
   &:active
-    box-shadow: 0 2px 6px rgba(#000, 0.4)
+    box-shadow: 0 0 0 rgba(#000, 0.4)
+    background-color: mix(#000, $color-sun, 5%)
+    color: #000
